完成登录/注册

--- a/src/main/resources/smart.properties
+++ b/src/main/resources/smart.properties
@@ -1,12 +1,13 @@
-smart.framework.app.base_package=com.doservlet.test
+smart.framework.app.base_package=com.cccxm.english
 smart.framework.app.jsp_path=/WEB-INF/view/
 smart.framework.app.asset_path=/asset/
 smart.framework.app.upload_limit=10
 #shiro security
 smart.plugin.security.cache=true
+smart.plugin.security.sso=security
 #jdbc custom
 smart.plugin.security.realms=custom
-smart.plugin.security.custom.class=com.doservlet.test.AppSecurity
+smart.plugin.security.custom.class=com.cccxm.english.security.AppSecurity
 smart.plugin.security.jdbc.authc_query=select password from user where username=?
 smart.plugin.security.jdbc.roles_query=select role.role_name from user,user_role,role where user.id =user_role.user_id and role.id=user_role.role_id and user.username=?
 smart.plugin.security.jdbc.permission_query=select permission.permission_name from role,role_permission,permission where role.id =role_permission.role_id and permission.id=role_permission.permission_id and role.role_name=?
