--- a/src/main/resources/smart.properties
+++ b/src/main/resources/smart.properties
@@ -1,4 +1,4 @@
-smart.framework.app.base_package=com.cccxm.english
+smart.framework.app.base_package=com.cccxm.english.view
 smart.framework.app.jsp_path=/WEB-INF/view/
 smart.framework.app.asset_path=/asset/
 smart.framework.app.upload_limit=10
