--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,14 @@
 		<filter-name>SmartSecurityFilter</filter-name>
 		<filter-class>com.doservlet.plugin.security.SmartSecurityFilter</filter-class>
 	</filter>
+	<filter>
+		<filter-name>AppSecurityFilter</filter-name>
+		<filter-class>com.cccxm.english.security.AppSecurityFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>AppSecurityFilter</filter-name>
+		<url-pattern>/user/*</url-pattern>
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>SmartSecurityFilter</filter-name>
 		<url-pattern>/*</url-pattern>
